Remove actions type from factory.
It makes more sense when each extension works on a run.
Then the extension can decide which actions to consider.